--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <head> This is my 1st website version 3.1.1 </head>
+  <head> i create my new webpage </head>
   <head> Tomcat server </head>
 
 </html>
