--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-  <head> i create my new webpage </head>
-  <head> Tomcat server </head>
+  <head> this is my first website version 4.0.0 </head>
 
 </html>
