--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-  <head> this is my first deploy using pipeline!!!!!!! </head>
+  <head> this is my first deploy using pipeline!!!!! </head>
 
 </html>
