--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-  <head> this is my six deploy in docker !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! </head>
+  <head> this is my six deploy in dockerrrrrrrrrrrrrrrrrrrrrrrrrrr ! </head>
 
 </html>
